# ido_rust

./: Cargo.toml  build.rs
config/: default.toml
proto/: auth.proto  common.proto  core.proto  order.proto  transaction.proto  user.proto
src/: main.rs  pb.rs
src/config/: configuration.rs  mod.rs  settings.rs
src/domain/: auth.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: redis.rs
src/infrastructure/db/: mysql.rs  user_entity.rs
src/infrastructure/repository/: mod.rs  order_repository.rs  user_repository.rs
src/interface/grpc/: health_handler.rs  order_handler.rs
src/middleware/: auth.rs
src/service/: order_service.rs
src/transport/: order.rs
