[package]
name = "ido_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
config = "0.14"
tonic = "0.11"
tokio = { version = "1", features = ["full"] }
prost = "0.12"
tonic-health = "0.11"
jsonwebtoken = "9"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
serde_json = "1"
redis = { version = "0.25", features = ["tokio-comp"] }
deadpool-redis = "0.14"
anyhow = "1"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
protoc-bin-vendored = "3"